# amareleo

./: Cargo.toml  README.md  build_ubuntu.sh
amareleo-chain/: Cargo.toml  README.md
amareleo-chain/src/: app_args.rs  chain_errors.rs  main.rs  tests.rs
amareleo-chain/src/config/: chain_cfg.rs  mod.rs
amareleo-chain/src/console/: console_man.rs  mod.rs
amareleo-chain/src/node/: mod.rs  snark_node.rs
amareleo-chain/src/node_batch/: mod.rs  node_set.rs
snarkos-lite/: Cargo.toml  README.md
snarkos-lite/account/: Cargo.toml  README.md
snarkos-lite/account/src/: lib.rs
snarkos-lite/cli/: Cargo.toml
snarkos-lite/cli/src/commands/: clean.rs  mod.rs  start.rs  update.rs
snarkos-lite/cli/src/helpers/: logger.rs  updater.rs
snarkos-lite/node/: Cargo.toml
snarkos-lite/node/helpers/: Cargo.toml
snarkos-lite/node/src/: lib.rs
snarkos-lite/snarkos/: main.rs
src/: main.rs
