[package]
name = "snarkos-lite"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cli", "node/helpers"]

[[bin]]
name = "snarkos-lite"
path = "snarkos/main.rs"

[dependencies]

[workspace.dependencies.aleo-std]
version = "=0.1.24"
default-features = false
features = ["storage"]

[workspace.dependencies.snarkvm]
path = "/home/alexubuntu22/aleo/snarkVM-lite"
# git = "https://github.com/AleoNet/snarkVM.git"
# rev = "3d42aa0"                                # If this is updated, the rev in `node/rest/Cargo.toml` must be updated as well.
#version = "=0.16.18"
features = ["circuit", "console", "rocks"]

[workspace.dependencies.snarkos-lite-account]
path = "./account"
version = "=0.1.0"

[dependencies.snarkos-lite-cli]
path = "./cli"
version = "=0.1.0"

[dependencies.snarkos-lite-node]
path = "./node"
version = "=0.1.0"

[dependencies.snarkos-lite-node-helpers]
path = "./node/helpers"
version = "=0.1.0"

[dependencies.anyhow]
version = "1.0.93"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.5"
