[package]
name = "snarkos-lite-account"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.colored]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.snarkvm]
workspace = true
features = ["console"]
