[package]
name = "snarkos-lite-cli"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkos-lite-node-helpers]
path = "../node/helpers"
version = "=0.1.0"

[dependencies.aleo-std]
workspace = true

[dependencies.anstyle]
version = "1"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = ["derive", "color", "unstable-styles"]

[dependencies.colored]
version = "2"

[dependencies.crossterm]
version = "0.27"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.self_update]
version = "0.41"
features = ["archive-zip", "compression-zip-deflate"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.time]
version = "0.3"
features = ["formatting"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.28"
features = ["rt"]

[dependencies.sys-info]
version = "0.9"

[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.26"
